tooling/nargo_cli/tests/snapshots/execution_failure/array_set_before_nested_branch_oob/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:5
  │
4 │     x[j] = 7;
  │     ----
  │
  = Call stack:
    1: main
            at src/main.nr:4:5

Failed assertion
