tooling/nargo_cli/tests/snapshots/execution_failure/array_set_before_nested_branch_oob/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 4294967295 is out of bounds for the array of length 4
  ┌─ src/main.nr:4:5
  │
4 │     x[j] = 7;
  │     ----
  │

Error interpreting main function
